--- a/pages/CampusServices/index.wxml
+++ b/pages/CampusServices/index.wxml
@@ -1,6 +1,6 @@
 <!--pages/CampusServices/index.wxml-->
 <custom-header title="校园服务"></custom-header>
-<text>BBBBBBBBBBBBBBBBBBBBB</text>
+<text>测试git</text>
 
 
 
