--- a/pages/login/login/login.wxss
+++ b/pages/login/login/login.wxss
@@ -81,9 +81,9 @@ page {
 .login-button {
   width: 100%; /* 按钮占据父容器的 100% 宽度 */
   padding: 20rpx; /* 按钮内边距，使文本内容离按钮边框有足够的空间 */
-  background-color: #2dca52; /* 按钮的背景颜色为绿色 */
+  background-color: rgba(57, 163, 100, 1); /* 按钮的背景颜色为绿色 */
   color: #ffffff; /* 按钮文字的颜色为白色 */
   border-radius: 15rpx; /* 按钮的圆角边框，边角半径为 10rpx */
-  font-size: 28rpx; /* 按钮中文字的字体大小 */
+  font-size: 30rpx; /* 按钮中文字的字体大小 */
   text-align: center; /* 按钮文字居中对齐 */
 }
