--- a/pages/PersonalCenter/personalMessage/index.wxss
+++ b/pages/PersonalCenter/personalMessage/index.wxss
@@ -76,3 +76,44 @@ page {
   text-align: center; /* 按钮文字居中对齐 */
   margin-top: 50rpx;
 }
+.popupView{
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  overflow: hidden;
+}
+.popupView .close{
+  flex-grow: 1;
+  background-color: rgba(41, 41, 41, 0.699);
+}
+.popupView .content {
+  background-color: #ffffff; /* 内容区背景为白色 */
+  padding: 15rpx;
+  flex-grow: 0.1; /* 让内容区占据尽可能多的空间 */
+  border-radius: 30rpx; /* 可选的圆角 */
+  z-index: 1001; /* 确保内容区在遮罩层上方 */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top:50rpx;
+}
+
+.input-box {
+  width: 70%;
+  margin-bottom: 20rpx; 
+  margin-top: 20rpx; 
+}
+.input {
+  width: 90%; 
+  padding: 20rpx; 
+  border-radius: 20rpx;
+  border: 1rpx solid #dcdcdc;
+  font-size: 28rpx; 
+}
+.logintext{
+  margin: 5px 5px;
+}
