--- a/pages/CampusServices/booksearch/index.wxml
+++ b/pages/CampusServices/booksearch/index.wxml
@@ -6,7 +6,40 @@
     <button class="login-button" bindtap="goToPersonalCenter" style="width:20%">查询</button>
   </view>
   <view class="function-box">
-  
-  
+    <view class="box">
+      <text class="indexname">书名:</text>
+      <text class="indexname">活着</text>
+    </view>
+    <view class="box">
+      <text class="indexname">作者:</text>
+      <text class="indexname">余华</text>
+    </view>
+    <view class="box">
+      <text class="indexname">索引号:</text>
+      <text class="indexname">132/32</text>
+    </view>
+    <view class="box">
+      <text class="indexname">出版社:</text>
+      <text class="indexname">人民出版社</text>
+    </view>
+    <view class="box">
+      <text class="indexname">出版时间:</text>
+      <text class="indexname">2010</text>
+    </view>
+    <view class="box">
+      <text class="indexname">馆藏地点:</text>
+      <text class="indexname">图书馆一楼</text>
+    </view>
   </view>
+
+  <view class="lowwer">
+    <button class="login-button1" bindtap="goToPersonalCenter" style="width:30%">上一页</button>
+    <text>第</text>
+    <text>1</text>
+    <text>页/共</text>
+    <text>23</text>
+    <text>页</text>
+    <button class="login-button2" bindtap="goToPersonalCenter" style="width:30%">下一页</button>
+  </view>
+
 </view>
