--- a/pages/CampusServices/booksearch/index.wxss
+++ b/pages/CampusServices/booksearch/index.wxss
@@ -1,10 +1,12 @@
 /* pages/CampusServices/booksearch/index.wxss */
-
+page {
+  overflow: hidden; /* 禁用页面滚动 */
+}
 .container {
   display: flex; 
   flex-direction: column; /* 子元素垂直排列 */
   align-items: center;
-  height: 100vh;
+  height: 85vh;
 }
 .header{
   display: flex; 
@@ -32,19 +34,54 @@
   font-size: 30rpx; 
   text-align: center;
   margin-left: 30rpx;
-  margin-right: 100rpx;
+  margin-right: 55rpx;
 }
 
 
 
 .function-box {
   display: flex; 
-  flex-direction: row;
+  flex-direction: column;
   background-color: #ffffff; 
-  width: 100%;
+  width: 85%;
+  height: 330rpx;
   border-radius: 10rpx;
-  height: 7%;
   margin-top: 20rpx; 
-  align-items: center; /*垂直居中*/
-  justify-items: center;
+}
+.box{
+  display: flex; 
+  flex-direction: row;
+  width: 90%;
+  height: 30rpx;
+  margin-left: 20rpx;
+  margin-top: 20rpx;
+}
+.indexname{
+  font-size: 30rpx;
+  margin-left: 10rpx;
+}
+
+
+.lowwer{
+  display: flex; 
+  flex-direction: row;
+  width: 85%;
+  height: 80rpx;
+  align-items: center;
+  justify-content: space-between; /* 子元素左右两端对齐 */
+  margin-top: auto; /* 将底部元素推到父容器底部 */
+}
+.login-button1{
+  background-color: rgba(57, 163, 100, 1);
+  color: #ffffff;
+  border-radius: 15rpx; 
+  font-size: 30rpx; 
+  text-align: center;
+}
+.login-button2{
+  background-color: rgba(57, 163, 100, 1);
+  color: #ffffff;
+  border-radius: 15rpx; 
+  font-size: 30rpx; 
+  text-align: center;
 }
