--- a/pages/CampusServices/selectCourse/index.wxss
+++ b/pages/CampusServices/selectCourse/index.wxss
@@ -1,1 +1,78 @@
 /* pages/CampusServices/selectCourse/index.wxss */
+page {
+  overflow: hidden; /*禁用页面滚动 */
+  }
+  .container {
+    display: flex; 
+    flex-direction: column; /* 子元素垂直排列 */
+    align-items: center;
+    height: 85vh;
+  }
+  
+  .function-box {
+    display: flex; 
+    flex-direction: column;
+    background-color: #ffffff; 
+    width: 100%;
+    height: 100%;
+    border-radius: 20rpx;
+    margin-top: 20rpx; 
+    align-items: center; /*垂直方向居中*/
+  }
+  
+  .header{
+    width: 90%;
+    height: 100rpx;
+  }
+  
+  .coursedetail-box{
+    display: flex; 
+    flex-direction: column;
+    width: 100%;
+    height: 410rpx;
+    margin-top: 30rpx;
+  }
+  .transverseLine{
+    background: #cdd1c5;
+    width: 100%;
+    height: 1rpx;
+    margin-top: 2rpx;
+  }
+  .coursename{
+    font-size: 35rpx;
+    margin-top: 30rpx;
+  }
+  .coursedetail{
+    display: flex; 
+    flex-direction: column;
+    width: 100%;
+    margin-top: 10rpx;
+    height: 300rpx;
+  }
+  .detail{
+    display: flex; 
+    flex-direction: row;
+    color: rgba(128, 128, 128, 1);
+    font-size: 25rpx;
+    margin-top: 5rpx;
+  }
+  
+  .detail1{
+    display: flex; 
+    flex-direction: row;
+    color: rgba(128, 128, 128, 1);
+    font-size: 25rpx;
+  }
+  
+  .value{
+    margin-left: 10rpx;
+  }
+
+  .timelist{
+    display: flex; 
+    flex-direction: column;
+    margin-left: 10rpx;
+  }
+  .buttonbox{
+    margin-left: auto;
+  }
