--- a/pages/PersonalCenter/courseList/index.wxml
+++ b/pages/PersonalCenter/courseList/index.wxml
@@ -1,3 +1,104 @@
 <!--pages/PersonalCenter/courseList/index.wxml-->
 <custom-header title="课程表"></custom-header>
-<text>pages/PersonalCenter/courseList/index.wxml</text>
+<view class="container">
+  <view class="select-box">
+    <view class="select-time">
+      test
+    </view>
+    <view class="select-class">
+      test
+    </view>
+  </view>
+
+
+  <view class="function-box">
+    <view class="coursedetail-box">
+      <view class="transverseLine"></view>
+      <view class="coursename">计算机忘了</view>
+      <view class="coursedetail">
+        <view class="detail">
+          <text>授课地点：</text>
+          <text class="value">17203教室</text>
+        </view>
+        <view class="detail">
+          <text>授课老师：</text>
+          <text class="value">马云</text>
+        </view>
+        <view class="detail">
+          <text>开课时间：</text>
+          <view class="timelist">
+            <view class="detail1">
+              <text>2023-2024下半学期</text>
+            </view>
+            <view class="detail">
+              <text>12周</text>
+            </view>
+            <view class="detail">
+              <text>星期三</text>
+              <text class="value">第二节</text>
+            </view>
+            <view class="detail">
+              <text>星期四</text>
+              <text class="value">第四节</text>
+            </view>
+          </view>
+        </view>
+        <view class="detail">
+          <text>课程学分：</text>
+          <text class="value">2分</text>
+        </view>
+        <view class="detail">
+          <text>课程简介：</text>
+          <text class="value">课程内容，课程目标</text>
+        </view>
+      </view>
+
+    </view>
+
+    <view class="coursedetail-box">
+      <view class="transverseLine"></view>
+      <view class="coursename">计算机忘了</view>
+      <view class="coursedetail">
+        <view class="detail">
+          <text>授课地点：</text>
+          <text class="value">17203教室</text>
+        </view>
+        <view class="detail">
+          <text>授课老师：</text>
+          <text class="value">马云</text>
+        </view>
+        <view class="detail">
+          <text>开课时间：</text>
+          <view class="timelist">
+            <view class="detail1">
+              <text>2023-2024下半学期</text>
+            </view>
+            <view class="detail">
+              <text>12周</text>
+            </view>
+            <view class="detail">
+              <text>星期三</text>
+              <text class="value">第二节</text>
+            </view>
+            <view class="detail">
+              <text>星期四</text>
+              <text class="value">第四节</text>
+            </view>
+          </view>
+        </view>
+        <view class="detail">
+          <text>课程学分：</text>
+          <text class="value">2分</text>
+        </view>
+        <view class="detail">
+          <text>课程简介：</text>
+          <text class="value">课程内容，课程目标</text>
+        </view>
+      </view>
+
+    </view>
+
+
+  </view>
+
+</view>
