--- a/pages/PersonalCenter/courseList/index.wxss
+++ b/pages/PersonalCenter/courseList/index.wxss
@@ -1,4 +1,87 @@
 /* pages/PersonalCenter/courseList/index.wxss */
 page {
-  overflow: hidden; /* 禁用页面滚动 */
+  background-attachment: scroll; /* 允许背景跟随页面滚动 */
+  /* overflow: hidden; 禁用页面滚动 */
+}
+.container {
+  display: flex; 
+  flex-direction: column; /* 子元素垂直排列 */
+  align-items: center;
+  height: 85vh;
+}
+.select-box{
+  display: flex; 
+  flex-direction: row;
+  width: 85%;
+  height: 250rpx;
+  margin-top: 20rpx;
+}
+.select-time{
+  width: 45%;
+  height: 100%;
+  margin-right: 5%;
+  background-color: #ffffff; 
+  border-radius: 20rpx;
+}
+.select-class{
+  width: 45%;
+  height: 100%;
+  margin-left: 5%;
+  background-color: #ffffff; 
+  border-radius: 20rpx;
+}
+.function-box {
+  display: flex; 
+  flex-direction: column;
+  background-color: #ffffff; 
+  width: 85%;
+  border-radius: 20rpx;
+  margin-top: 20rpx; 
+  align-items: center; /*垂直方向居中*/
+}
+.coursedetail-box{
+  display: flex; 
+  flex-direction: column;
+  width: 90%;
+  height: 390rpx;
+  margin-top: 20rpx;
+}
+.transverseLine{
+  background: #cdd1c5;
+  width: 100%;
+  height: 1rpx;
+  margin-top: 2rpx;
+}
+.coursename{
+  font-size: 35rpx;
+  margin-top: 30rpx;
+}
+.coursedetail{
+  display: flex; 
+  flex-direction: column;
+  width: 100%;
+  margin-top: 10rpx;
+}
+.detail{
+  display: flex; 
+  flex-direction: row;
+  color: rgba(128, 128, 128, 1);
+  font-size: 25rpx;
+  margin-top: 5rpx;
+}
+
+.detail1{
+  display: flex; 
+  flex-direction: row;
+  color: rgba(128, 128, 128, 1);
+  font-size: 25rpx;
+}
+
+.value{
+  margin-left: 10rpx;
+}
+.timelist{
+  display: flex; 
+  flex-direction: column;
+  margin-left: 10rpx;
 }
