--- a/pages/login/login/login.wxml
+++ b/pages/login/login/login.wxml
@@ -1,4 +1,4 @@
-<custom-header title="智慧校园"></custom-header>
+<custom-header1 title="智慧校园"></custom-header1>
 <view class="container">
   <view class="header">
     <text class="greeting">HI，</text>
