--- a/components/my_select/index.wxss
+++ b/components/my_select/index.wxss
@@ -1,55 +1,60 @@
 /* components/my_select/index.wxss */
+
 .select_all_view {
   display: flex;
   z-index: 999;
+  width: 334rpx;/*框的背景宽度*/
+  height: 82rpx;
+  background: #F9F9F9;
+  border-radius: 12rpx 12rpx 12rpx 12rpx;
+  opacity: 1;
+  margin-bottom: 15rpx;
 }
  
 .select_view {
   display: inline;
-  width: 200rpx;
-  height: 64rpx;
+  /* width: 200rpx;
+  height: 64rpx; */
 }
  
-/* .select_title {
-  margin-right: 10rpx;
-} */
- 
 .inputPlaceholder {
-  min-width: 230rpx;
-  height: 64rpx;
-  background: #FFFFFF;
+  min-width: 334rpx;/*框的宽度*/
+  height: 82rpx;
+  background: #F9F9F9;
   border: 2rpx solid #D9D9D9;
   border-radius: 12rpx 12rpx 12rpx 12rpx;
   padding: 4rpx 0rpx 10rpx 10rpx;
+  /* color: #252525;
+  font-weight: 400; */
   border-radius: 10rpx;
   position: relative;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  font-size: 28rpx;
-  font-weight: 400;
+  font-size: 32rpx;
+  font-family: PingFang SC-Regular, PingFang SC;
   color: #000000;
-  line-height: 33rpx;
+  line-height: 38rpx;
 }
  
 .select_view .inputPlaceholder .text {
   height: 40rpx;
   position: relative;
-  top: 16rpx;
-  left: 12rpx;
+  top: 30rpx;
+  left: 24rpx;
 }
  
 .icon {
   position: absolute;
-  right: 12rpx;
-  top: 20rpx;
+  right: 24rpx;
+  top: 30rpx;
 }
  
 .content {
   position: absolute;
   z-index: 999;
-  width: 200rpx;
-  max-height: 208rpx;
+  min-width: 200rpx;/*下拉框的最小宽度*/
+  max-height: 516rpx;
   background: #FFFFFF;
   box-shadow: 0rpx 12rpx 32rpx 0rpx rgba(0, 0, 0, 0.08), 0rpx 6rpx 12rpx -8rpx rgba(0, 0, 0, 0.12), 0rpx 18rpx 56rpx 16rpx rgba(0, 0, 0, 0.05);
   border-radius: 16rpx 16rpx 16rpx 16rpx;
@@ -64,33 +69,33 @@
   align-items: center;
 }
  
-.select_view .content .active {
-  width: 184rpx;
-  height: 64rpx;
+.content>.inputPlaceholder {
+  padding: 10rpx 0;
+}
+ 
+.select_view .active {
+  width: 310rpx;/*下拉框的选项被选择后的宽度*/
+  height: 90rpx;
   background: #F9F9F9;
-  border-radius: 0rpx 0rpx 0rpx 0rpx;
-  opacity: 1;
-  font-size: 28rpx;
+  font-size: 32rpx;
   font-family: PingFang SC-Regular, PingFang SC;
-  font-weight: 400;
+  font-weight: 600;
   color: #000000;
-  line-height: 33rpx;
+  line-height: 38rpx;
   display: flex;
   justify-content: center;
   align-items: center;
 }
  
-.select_view .content .normal {
-  width: 184rpx;
-  height: 64rpx;
-  background: #FFFFFF;
-  border-radius: 0rpx 0rpx 0rpx 0rpx;
+.select_view .normal {
+  width: 310rpx;/*下拉框的选项未选择宽度*/
+  height: 90rpx;
+  border-radius: 16rpx 16rpx 16rpx 16rpx;
   opacity: 1;
-  font-size: 28rpx;
+  font-size: 32rpx;
   font-family: PingFang SC-Regular, PingFang SC;
-  font-weight: 400;
   color: #000000;
-  line-height: 33rpx;
+  line-height: 38rpx;
   display: flex;
   justify-content: center;
   align-items: center;
