--- a/components/select_month/index.wxss
+++ b/components/select_month/index.wxss
@@ -1,13 +1,13 @@
-/* components/my_select/index.wxss */
-
+/* components/select_month/index.wxss */
 .select_all_view {
   display: flex;
   z-index: 999;
-  width: 254rpx;/*框的背景宽度*/
-  height: 82rpx;
+  width: 200rpx;
+  height: 52rpx;
   background: #F9F9F9;
   border-radius: 12rpx 12rpx 12rpx 12rpx;
   opacity: 1;
+  margin-bottom: 20rpx;
 }
  
 .select_view {
@@ -17,23 +17,21 @@
 }
  
 .inputPlaceholder {
-  min-width: 264rpx;/*框的宽度*/
-  height: 82rpx;
+  min-width: 200rpx;
+  height: 52rpx;
   background: #F9F9F9;
-  border: 2rpx solid #F9F9F9;
+  border: 2rpx solid #D9D9D9;
   border-radius: 12rpx 12rpx 12rpx 12rpx;
   padding: 4rpx 0rpx 10rpx 10rpx;
-  /* color: #252525;
-  font-weight: 400; */
   border-radius: 10rpx;
   position: relative;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  font-size: 32rpx;
+  font-size: 28rpx;
   font-family: PingFang SC-Regular, PingFang SC;
   color: #000000;
-  line-height: 38rpx;
+  line-height: 5rpx;
 }
  
 .select_view .inputPlaceholder .text {
@@ -46,15 +44,15 @@
 .icon {
   position: absolute;
   right: 24rpx;
-  top: 30rpx;
+  top: 20rpx;
 }
  
 .content {
   position: absolute;
   z-index: 999;
-  min-width: 200rpx;/*下拉框的最小宽度*/
+  min-width: 175rpx;
   max-height: 516rpx;
-  background: #F9F9F9;
+  background: #FFFFFF;
   box-shadow: 0rpx 12rpx 32rpx 0rpx rgba(0, 0, 0, 0.08), 0rpx 6rpx 12rpx -8rpx rgba(0, 0, 0, 0.12), 0rpx 18rpx 56rpx 16rpx rgba(0, 0, 0, 0.05);
   border-radius: 16rpx 16rpx 16rpx 16rpx;
   opacity: 1;
@@ -73,10 +71,10 @@
 }
  
 .select_view .active {
-  width: 240rpx;/*下拉框的选项被选择后的宽度*/
-  height: 90rpx;
+  width: 150rpx;/*下拉框的选项被选择后的宽度*/
+  height: 70rpx;
   background: #F9F9F9;
-  font-size: 32rpx;
+  font-size: 28rpx;
   font-family: PingFang SC-Regular, PingFang SC;
   font-weight: 600;
   color: #000000;
@@ -87,11 +85,11 @@
 }
  
 .select_view .normal {
-  width: 240rpx;/*下拉框的选项未选择宽度*/
-  height: 90rpx;
+  width: 100rpx;
+  height: 70rpx;
   border-radius: 16rpx 16rpx 16rpx 16rpx;
   opacity: 1;
-  font-size: 32rpx;
+  font-size: 28rpx;
   font-family: PingFang SC-Regular, PingFang SC;
   color: #000000;
   line-height: 38rpx;
