--- a/pages/login/register/index.wxml
+++ b/pages/login/register/index.wxml
@@ -1,3 +1,25 @@
 <!--pages/login/register/index.wxml-->
-<custom-header title="注册"></custom-header>
-<text>pages/login/register/index.wxml</text>
+<custom-header1 title="智慧校园"></custom-header1>
+<view class="container">
+  <view class="select_all_view">
+    <view class="select_view">
+      <!-- 输入框 -->
+      <view class="inputPlaceholder" bindtap="startChange">
+        <text class="text" wx:if='{{select}}'>{{select}}</text>
+        <text class="text" wx:else>{{placeholder}}</text>
+        <view class="icon" wx:if='{{changable}}'>
+          <van-icon name="arrow-down" />
+        </view>
+        <view class="icon" wx:else>
+          <van-icon name="arrow" />
+        </view>
+      </view>
+      <!-- 下拉展开后的可选择内容 -->
+      <view class="content" wx:if='{{changable}}'>
+        <view class="{{item.id == selectId ? 'active' : 'normal'}}" wx:for="{{selectcontent}}" wx:key="id" bindtap="changecontent" data-datavalue="{{item}}">
+          {{item.name}}
+        </view>
+      </view>
+    </view>
+  </view>
+</view>
