--- a/pages/CampusServices/phonesearch/index.wxml
+++ b/pages/CampusServices/phonesearch/index.wxml
@@ -3,25 +3,18 @@
 <view class="container">
   <view class="header">
     <input class="input" placeholder="请输入关键字查询" bindinput="onInputAccount"/>
-    <button class="login-button" bindtap="goToPersonalCenter" style="width:20%">查询</button>
+    <button class="login-button" bindtap="searchPhone" style="width:20%">查询</button>
   </view>
   <view class="function-box">
-
-    <view class="list">
-      <view class="list-box">
-        <image src="../../../icon/personalpicture.png" class="phoneicon"></image>
-        <view class="textname">院长</view>
+    <block wx:for="{{phoneList}}" wx:key="id">
+      <view class="list" bindtap="showPhoneNumber" data-name="{{item.name}}" data-phone="{{item.phoneNumber}}">
+        <view class="list-box">
+          <image src="../../../icon/personalpicture.png" class="phoneicon"></image>
+          <view class="textname">{{item.name}}</view>
+        </view>
+        <view class="transverseLine"></view>
       </view>
-      <view class="transverseLine"></view>
-    </view>
-
-    <view class="list">
-      <view class="list-box">
-        <image src="../../../icon/personalpicture.png" class="phoneicon"></image>
-        <view class="textname">院长</view>
-      </view>
-      <view class="transverseLine"></view>
-    </view>
-
+    </block>
   </view>
 </view>
+<van-dialog id="van-dialog" show="{{showDialog}}" title="{{linkTitle}}" message="{{phoneNumber}}" show-cancel-button="{{false}}" confirm-button-text="确认" bind:close="onClose" />
