--- a/pages/CampusServices/schoolintroduce/index.wxss
+++ b/pages/CampusServices/schoolintroduce/index.wxss
@@ -11,7 +11,6 @@
   flex-direction: column;
   background-color: #ffffff; 
   width: 90%;
-  height: 300rpx;
   border-radius: 30rpx;
   margin-top: 40rpx; 
 }
@@ -24,5 +23,6 @@
   font-size: 25rpx;
   margin-top: 20rpx;
   margin-left: 30rpx;
+  margin-bottom: 30rpx;
 }
 
