--- a/pages/PersonalCenter/courseList/index.wxml
+++ b/pages/PersonalCenter/courseList/index.wxml
@@ -1,104 +1,63 @@
+
 <!--pages/PersonalCenter/courseList/index.wxml-->
 <custom-header title="课程表"></custom-header>
 <view class="container">
+  <!-- 学期和周数选择 -->
   <view class="select-box">
     <view class="select-time">
-      <select-postSale nowId="{{curfId1}}" nameList="{{brandList1}}" nowName="{{curBrandName1}}" placeholder="请选择学期" bind:handleChange="changeBrand1"></select-postSale>
+      <select-postSale
+        nowId="{{curfId1}}"
+        nameList="{{brandList1}}"
+        nowName="{{curBrandName1}}"
+        placeholder="请选择学期"
+        bind:handleChange="changeBrand1"
+      ></select-postSale>
     </view>
     <view class="select-class">
-      <select-postSale nowId="{{curfId2}}" nameList="{{brandList2}}" nowName="{{curBrandName2}}" placeholder="请选择周数" bind:handleChange="changeBrand2"></select-postSale>
+      <select-postSale
+        nowId="{{curfId2}}"
+        nameList="{{brandList2}}"
+        nowName="{{curBrandName2}}"
+        placeholder="请选择周数"
+        bind:handleChange="changeBrand2"
+      ></select-postSale>
     </view>
   </view>
 
-
+  <!-- 课程列表 -->
   <view class="function-box">
-    <view class="coursedetail-box">
-      <view class="transverseLine"></view>
-      <view class="coursename">计算机忘了</view>
-      <view class="coursedetail">
-        <view class="detail">
-          <text>授课地点：</text>
-          <text class="value">17203教室</text>
-        </view>
-        <view class="detail">
-          <text>授课老师：</text>
-          <text class="value">马云</text>
-        </view>
-        <view class="detail">
-          <text>开课时间：</text>
-          <view class="timelist">
-            <view class="detail1">
-              <text>2023-2024下半学期</text>
-            </view>
-            <view class="detail">
-              <text>12周</text>
-            </view>
-            <view class="detail">
-              <text>星期三</text>
-              <text class="value">第二节</text>
-            </view>
-            <view class="detail">
-              <text>星期四</text>
-              <text class="value">第四节</text>
+    <block wx:for="{{courseList}}" wx:key="id">
+      <view class="coursedetail-box">
+        <view class="transverseLine"></view>
+        <view class="coursename">{{item.name}}</view>
+        <view class="coursedetail">
+          <view class="detail">
+            <text>授课地点：</text>
+            <text class="value">{{item.location}}</text>
+          </view>
+          <view class="detail">
+            <text>授课老师：</text>
+            <text class="value">{{item.teacher}}</text>
+          </view>
+          <view class="detail">
+            <text>开课时间：</text>
+            <view class="timelist">
+              <view class="detail1">
+                <text>{{item.time}}</text>
+              </view>
             </view>
           </view>
-        </view>
-        <view class="detail">
-          <text>课程学分：</text>
-          <text class="value">2分</text>
-        </view>
-        <view class="detail">
-          <text>课程简介：</text>
-          <text class="value">课程内容，课程目标</text>
-        </view>
-      </view>
-
-    </view>
-
-    <view class="coursedetail-box">
-      <view class="transverseLine"></view>
-      <view class="coursename">计算机忘了</view>
-      <view class="coursedetail">
-        <view class="detail">
-          <text>授课地点：</text>
-          <text class="value">17203教室</text>
-        </view>
-        <view class="detail">
-          <text>授课老师：</text>
-          <text class="value">马云</text>
-        </view>
-        <view class="detail">
-          <text>开课时间：</text>
-          <view class="timelist">
-            <view class="detail1">
-              <text>2023-2024下半学期</text>
-            </view>
-            <view class="detail">
-              <text>12周</text>
-            </view>
-            <view class="detail">
-              <text>星期三</text>
-              <text class="value">第二节</text>
-            </view>
-            <view class="detail">
-              <text>星期四</text>
-              <text class="value">第四节</text>
-            </view>
+          <view class="detail">
+            <text>课程学分：</text>
+            <text class="value">{{item.credit}}分</text>
           </view>
         </view>
-        <view class="detail">
-          <text>课程学分：</text>
-          <text class="value">2分</text>
-        </view>
-        <view class="detail">
-          <text>课程简介：</text>
-          <text class="value">课程内容，课程目标</text>
-        </view>
       </view>
+    </block>
 
+    <!-- 无数据提示 -->
+    <view wx:if="{{courseList.length === 0}}" class="no-data">
+      <text>暂无课程信息</text>
     </view>
-
-
   </view>
-
 </view>
