--- a/pages/PersonalCenter/personalMessage/index.wxml
+++ b/pages/PersonalCenter/personalMessage/index.wxml
@@ -46,11 +46,11 @@
     <view class="content">
       <view class="input-box">
         <view class="logintext">原密码</view>
-        <input class="input" placeholder="请输入原密码" bindinput="onInputAccount"/>
+        <input class="input" value="{{originalPassword}}" placeholder="请输入原密码" bindinput="onOriginalPasswordInput"/>
       </view>
       <view class="input-box">
         <view class="logintext">新联系方式</view>
-        <input class="input" placeholder="请输入新联系方式" bindinput="onInputAccount"/>
+        <input class="input" value="{{newPhone}}" placeholder="请输入新联系方式" bindinput="onNewPhoneInput"/>
       </view>
       <button class="change-button" style="width:40%" bindtap="updatePhone">点击修改</button>
     </view>
