--- a/pages/PersonalCenter/personalMessage/index.wxml
+++ b/pages/PersonalCenter/personalMessage/index.wxml
@@ -2,7 +2,7 @@
 <custom-header title="个人信息"></custom-header>
 <view class="container">
   <view class="header">
-    <image src="../../../icon/personalpicture.png" class="personalpicture"></image>
+    <image src="../../../icon/personalMessage.png" class="personalpicture"></image>
   </view>
 
   <view class="function-box">
